# ffb_tusb_hid_esp_simplefoc_slave

./: .clang-format  .clangd  CMakeLists.txt  LICENSE  README.md  README.org  partitions.csv  sdkconfig.defaults
components/Arduino-FOC-2.2/: CMakeLists.txt
components/Arduino-FOC-2.2/src/: BLDCMotor.cpp  BLDCMotor.h  SimpleFOC.h  StepperMotor.cpp  StepperMotor.h
components/Arduino-FOC-2.2/src/common/: defaults.h  foc_utils.cpp  foc_utils.h  lowpass_filter.cpp  lowpass_filter.h  pid.cpp  pid.h  time_utils.cpp
components/Arduino-FOC-2.2/src/communication/: Commander.cpp  Commander.h  StepDirListener.cpp  StepDirListener.h  commands.h
components/Arduino-FOC-2.2/src/current_sense/: InlineCurrentSense.cpp  InlineCurrentSense.h  hardware_api.h  (+2 more)
components/ArduinoCore-avr-1.8.7/: CMakeLists.txt
components/ArduinoCore-avr-1.8.7/cores/arduino/: Arduino.h  Arduino_HAL.cpp  Arduino_HAL.h  Arduino_interface.c  Arduino_interface.h  HardwareSerial.cpp  HardwareSerial.h  HardwareSerial0.cpp  HardwareSerial1.cpp  HardwareSerial2.cpp  HardwareSerial3.cpp  HardwareSerial_private.h  Print.cpp  Print.h  Printable.h  Stream.h  WCharacter.h  WString.h  wiring_private.h
components/ArduinoCore-avr-1.8.7/libraries/SPI/src/: SPI.cpp  SPI.h
components/ArduinoCore-avr-1.8.7/libraries/Wire/src/: Wire.cpp  Wire.h
components/ArduinoCore-avr-1.8.7/variants/standard/: pins_arduino.cpp  pins_arduino.h
main/: CMakeLists.txt  Kconfig.projbuild  debug.cpp  debug.h  espnow_example.h  espnow_example_main.c  idf_component.yml  interface.cpp  interface.h  main.cpp  simple_foc.cpp  uart.cpp
(+58 files in other folders)
